# bcc-crypto

./: LICENSE  README.md  bcc-crypto.cabal  cabal.project
benchs/: Bench.hs
cbits/: encrypted_sign.c
src/Bcc/Crypto/: Wallet.hs
src/Bcc/Crypto/Encoding/: BIP39.hs  Seed.hs
src/Bcc/Crypto/Wallet/: Encrypted.hs  Pure.hs  Types.hs
src/Bcc/Internal/: Compat.hs
src/Crypto/ECC/: Ed25519Donna.hs
src/Crypto/Encoding/: BIP39.hs
test/: GoldenTest.hs  Spec.hs  Utils.hs
test/Test/: Bcc.hs  Orphans.hs
test/Test/Bcc/: Crypto.hs
test/Test/Bcc/Crypto/: Encoding.hs
test/Test/Bcc/Crypto/Encoding/: Seed.hs
test/Test/Crypto/Encoding/: BIP39.hs
tests/goldens/bcc/crypto/: scramble128
